--- a/packages/local1/local1.cabal
+++ b/packages/local1/local1.cabal
@@ -18,9 +18,9 @@ library
   hs-source-dirs:
       lib
   build-depends:
-      aeson
+      aeson ==2.2.*
     , base ==4.*
-    , extra
+    , extra ==1.7.*
     , th-abstraction ==0.5.*
   default-language: Haskell2010
 
